[package]
name = "participants"
authors = ["ffromm"]
description = "Manage Hackathon participants"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
spin-sdk = "3.1.0"

[workspace]
